New in svn version:

   * PW: the code can capture "signals". typically sent by batch queues
     when allowed time is close to expire, and terminate gracefully.
     Experimental, to be enabled at compile time (see the user guide)
   * TDDFPT: Implemented a restart option in turbo_Davidson

Fixed in svn version:

   * Kernel table for rVV10 nonlocal functional was not written to file,
     breaking restart and postprocessing (no problem for scf)
   * Strange compilation bug on some IBM machines
   * Minor bug in ESM implementation

New in 5.1 version:

   * "Cold restart" for Car-Parrinello dynamics
   * Calling QE from external codes made easier: see new subdirectory COUPLE
   * PW: Hybrid functionals for USPP and PAW (experimental)
   * PW: partial support to the use of k-point labels in the Brillouin zone
   * PW: Langevin dynamics with Smart Monte Carlo
   * CP and PW: Tkatchenko-Scheffler vdW correction (experimental)
   * GWW replaced by GWL (using Lanczos chains)
   * turboTDDFT: pseudo_Hermitian Lanczos algorithm and 
     Davidson-like diagonalization added
   * PWCOND with DFT+U
   * New functionals: gau-pbe, PW86 (unrevised), B86B, XDM (exchange-hole 
     dipole moment) model of dispersions, vdW-DF3, vdW-DF4 (Klimes et al),
     rVV10, optB86b-vdW, rev-vdW-DF2 
   * PHonon: Calculation of phonon dispersions using the finite displacements 
     supercell approach. See subdirectory FD/ in PHonon.
   * dynmat.x can calculate phonon contribution to dielectric tensor
   * turboTDDFT now supports hybrid functionals (only with norm-conserving
     pseudopotentials)
   * "image" parallelization re-introduced in pw.x: see code "manypw.x"

Incompatible changes in 5.1 version:

   * Initialization of MPI modified in order to simplify usage of QE routines
     from external codes. It is now possible to run an instance of QE into a
     mpi communicator passed by the external routine. Changes affect a few MPI